feat: 심화 구현 완료